# noc_manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  client.py  docker-compose.yml  mcp_server.py  pyproject.toml
scripts/: diagnose_vcenter_api.py
src/noc_managers/: app.py  mcp_server.py
src/noc_managers/mcp_servers/: solarwinds.py  vcenter.py
